test_programs/compile_failure/noirc_frontend_tests_traits_trait_inheritance_missing_parent_implementation/src/main.nr

        pub trait Foo {}

        pub trait Bar: Foo {}

        pub struct Struct {}

        impl Bar for Struct {}

        fn main() {
        }
    